--- a/vapordrive/game.css
+++ b/vapordrive/game.css
@@ -7,7 +7,7 @@ body
 	margin: 0px;
 }
 
-.bordered-element, .rssincl-title
+.bordered-element
 {
 	clear: right;
 	display: block;
@@ -19,48 +19,41 @@ body
 
 .image-content-1
 {
+    text-shadow: 1px 1px black;
 	position: static;
 	display: flex;
-	background-image: url('img/aarrebgblur.jpg');
+	background-image: url('img/gamebg.jpg');
 	height: 100vh;
 
 }
-.menu-item
+
+.about-content
 {
-	display: inline-block;
-	width: 300px;
-	height: 300px;
-	padding:10px;
-	margin: 10px;
-	float: left;
+	text-align: center;
+	position: static;
+	display: block;
+	background-color: rgb(80,60,80);
+	padding: 40px;
 }
 
-.menu-content
+.privacy-policy
 {
+	min-height: 100vh;
 	position: static;
-	display: flex;
-	background-color: rgb(60,80,60);
+	display: block;
+	background-color: rgb(100,80,100);
 	padding: 40px;
 }
-.blog-content
-{
-	position: static;
-	display: flex;
-	background-color: rgb(80,100,80);
-	padding: 40px;
-}
-.rssincl-content
-{padding-right:200px;
-padding-left:200px;}
+
 a
 {
 	color: rgb(180,180,255);
 }
-h1, h2, h3, .rssincl-title, .rssincl-itemtitle{
+h1, h2, h3 {
 	color: white;
 	font-family: 'Bungee', cursive;
 }
-.rssincl-title, h3, .rssincl-itemtitle
+h3
 {font-size: 1.2em}
 
 h1{
@@ -79,9 +72,6 @@ p, h4{
 
 @media screen and (max-width: 768px)
 {
-	.rssincl-content
-{padding-right:10px;
-padding-left:10px;}
 	.bordered-element
 {
 	display: block;
