--- a/aarreent.css
+++ b/aarreent.css
@@ -45,7 +45,7 @@ body
 .blog-content
 {
 	position: static;
-	display: flex;
+	display: block;
 	background-color: rgb(80,100,80);
 	padding: 40px;
 }
