--- a/aarreent.css
+++ b/aarreent.css
@@ -79,6 +79,12 @@ p, h4{
 
 @media screen and (max-width: 768px)
 {
+	.menu-item
+{
+	width: 200px;
+	height: 200px;
+}
+
 	.rssincl-content
 {padding-right:10px;
 padding-left:10px;}
