--- a/vapordrive/game.css
+++ b/vapordrive/game.css
@@ -25,8 +25,26 @@ body
 	background-image: url('img/gamebg.jpg');
 	height: 100vh;
 
+	background-position: center;
 }
 
+.intrinsic-container {
+	margin-left: auto;
+	margin-right: auto;
+	width: 50%;
+	position: relative;
+	height:0;
+	overflow:hidden;
+	padding-bottom: 30%;
+}
+.intrinsic-container iframe
+{
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+}
 .about-content
 {
 	text-align: center;
@@ -72,6 +90,15 @@ p, h4{
 
 @media screen and (max-width: 768px)
 {
+		.intrinsic-container {
+	margin-left: auto;
+	margin-right: auto;
+	width: 100%;
+	position: relative;
+	height:0;
+	overflow:hidden;
+	padding-bottom: 56.25%;}
+
 	.bordered-element
 {
 	display: block;
