--- a/stylesheet.css
+++ b/stylesheet.css
@@ -102,11 +102,17 @@ img {
 }
 
 article {
-	padding-left: 20%;
-	padding-right: 20%;
+	padding-left: 25%;
+	padding-right: 25%;
 	padding-top: 5%;
 	padding-bottom: 5%;
 }
+
+header footer {
+	padding-left: 5%;
+	padding-right: 5%;
+
+} 
 
 .menu {
 	background-color: #202030;
