--- a/stylesheet.css
+++ b/stylesheet.css
@@ -49,7 +49,21 @@ a:hover {
 img {
 	max-width: 50%;
 }
+
+article {
+	padding-left: 25%;
+	padding-right: 25%;
+	padding-top: 5%;
+	padding-bottom: 5%;
+}
+#articlelink {
+	visibility: hidden;
+}
+
 @media only screen and (max-width: 768px) {
+	#articlelink {
+		visibility: visible;
+	}
 	.banner {
 		flex-direction: row;
 		padding: 0px;
@@ -101,12 +115,7 @@ img {
 	color: #CCCC99;
 }
 
-article {
-	padding-left: 25%;
-	padding-right: 25%;
-	padding-top: 5%;
-	padding-bottom: 5%;
-}
+
 
 header, footer {
 	padding-left: 5%;
